[tool.poetry]
name = "huobi-spot-order-notification"
version = "0.1.0"
description = ""
authors = ["kuznetsov-m"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.13"
huobi-sdk = "2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
